--- a/.conkyrc
+++ b/.conkyrc
@@ -91,8 +91,8 @@ border_margin 5
 border_width 0
 
 # Default colors and also border colors
-default_color grey
-default_shade_color grey 
+default_color C0C0C0 
+default_shade_color C0C0C0 
 default_outline_color white
 #default_shade_color white
 #default_outline_color 
