--- a/.weechat-dev/weechat.conf
+++ b/.weechat-dev/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v0.2.7-dev, Sun Feb 22 15:18:39 2009
+# weechat.conf -- weechat v0.2.7-dev, Sun Mar  1 20:51:22 2009
 #
 
 [debug]
@@ -201,14 +201,14 @@ title.type = window
 buffer = "core;weechat;1"
 buffer = "python;hilight;2"
 buffer = "irc;servers;3"
-buffer = "irc;freenode.#archlinux;4"
-buffer = "irc;freenode.#archlinux-offtopic;5"
-buffer = "irc;freenode.#weechat;6"
-buffer = "irc;freenode.#sharntest;7"
+buffer = "irc;bitlbee.&bitlbee;4"
+buffer = "irc;freenode.#archlinux;5"
+buffer = "irc;freenode.#archlinux-offtopic;6"
+buffer = "irc;freenode.#weechat;7"
 buffer = "irc;freenode.#linif;8"
-buffer = "irc;bitlbee.&bitlbee;9"
+buffer = "irc;freenode.#sharntest;9"
 window = "1;0;25;1;-;-"
-window = "2;1;0;0;irc;freenode.#archlinux"
+window = "2;1;0;0;irc;freenode.#weechat"
 window = "3;1;0;0;python;hilight"
 
 [filter]
