--- a/.weechat-dev/weechat.conf
+++ b/.weechat-dev/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v0.2.7-dev, Sun Mar  1 20:51:22 2009
+# weechat.conf -- weechat v0.2.7-dev
 #
 
 [debug]
@@ -19,9 +19,9 @@ color_real_white = off
 day_change = on
 day_change_time_format = "%a, %d %b %Y"
 highlight = ""
-hotlist_names_count = 4
-hotlist_names_length = 20
-hotlist_names_level = 15
+hotlist_names_count = 3
+hotlist_names_length = 0
+hotlist_names_level = 12
 hotlist_short_names = on
 hotlist_sort = group_time_asc
 item_time_format = "%H:%M"
@@ -30,7 +30,7 @@ nickmode_empty = off
 paste_max_lines = 3
 prefix_action = " *"
 prefix_align = right
-prefix_align_max = 0
+prefix_align_max = 25
 prefix_error = "=!="
 prefix_join = "-->"
 prefix_network = "--"
@@ -51,7 +51,7 @@ chat_buffer = white
 chat_channel = white
 chat_delimiters = green
 chat_highlight = yellow
-chat_highlight_bg = red
+chat_highlight_bg = magenta
 chat_host = cyan
 chat_nick = lightcyan
 chat_nick_color01 = cyan
@@ -93,7 +93,7 @@ nicklist_prefix4 = blue
 nicklist_prefix5 = brown
 nicklist_separator = blue
 separator = blue
-status_data_highlight = red
+status_data_highlight = lightmagenta
 status_data_msg = yellow
 status_data_other = default
 status_data_private = lightgreen
@@ -169,7 +169,7 @@ nicklist.size = 0
 nicklist.size_max = 0
 nicklist.type = window
 status.color_bg = blue
-status.color_delim = green
+status.color_delim = cyan
 status.color_fg = default
 status.conditions = ""
 status.filling_left_right = vertical
@@ -183,7 +183,7 @@ status.size = 1
 status.size_max = 0
 status.type = window
 title.color_bg = blue
-title.color_delim = green
+title.color_delim = cyan
 title.color_fg = default
 title.conditions = ""
 title.filling_left_right = vertical
@@ -199,17 +199,21 @@ title.type = window
 
 [layout]
 buffer = "core;weechat;1"
-buffer = "python;hilight;2"
-buffer = "irc;servers;3"
-buffer = "irc;bitlbee.&bitlbee;4"
-buffer = "irc;freenode.#archlinux;5"
-buffer = "irc;freenode.#archlinux-offtopic;6"
-buffer = "irc;freenode.#weechat;7"
-buffer = "irc;freenode.#linif;8"
-buffer = "irc;freenode.#sharntest;9"
-window = "1;0;25;1;-;-"
-window = "2;1;0;0;irc;freenode.#weechat"
-window = "3;1;0;0;python;hilight"
+buffer = "perl;hilight;2"
+buffer = "irc;server.freenode;3"
+buffer = "irc;server.bitlbee;4"
+buffer = "irc;bitlbee.&bitlbee;5"
+buffer = "irc;freenode.#archlinux;6"
+buffer = "irc;freenode.#archlinux-offtopic;7"
+buffer = "irc;freenode.#weechat;8"
+buffer = "irc;freenode.#python;9"
+buffer = "irc;freenode.#linuxif;10"
+buffer = "irc;freenode.#sharntest;11"
+buffer = "irc;freenode.#wicd;12"
+buffer = "perl;iset;13"
+window = "1;0;22;1;-;-"
+window = "2;1;0;0;core;weechat"
+window = "3;1;0;0;perl;hilight"
 
 [filter]
 irc_smart = on;*;irc_smart_filter;*
@@ -270,7 +274,6 @@ meta-b = "/input move_previous_word"
 meta-d = "/input delete_next_word"
 meta-e = "/buffer 13"
 meta-f = "/input move_next_word"
-meta-g = "/go"
 meta-h = "/input hotlist_clear"
 meta-i = "/buffer 18"
 meta-j01 = "/buffer 1"
@@ -392,6 +395,7 @@ meta-wmeta-meta2-B = "/window down"
 meta-wmeta-meta2-C = "/window right"
 meta-wmeta-meta2-D = "/window left"
 meta-y = "/buffer 16"
+meta-z = "/window zoom"
 ctrl-A = "/input move_beginning_of_line"
 ctrl-B = "/input move_previous_char"
 ctrl-Cb = "/input insert \x02"
