--- a/.weechat-dev/weechat.conf
+++ b/.weechat-dev/weechat.conf
@@ -19,16 +19,16 @@ color_real_white = off
 day_change = on
 day_change_time_format = "%a, %d %b %Y"
 highlight = ""
-hotlist_names_count = 3
-hotlist_names_length = 0
-hotlist_names_level = 12
+hotlist_names_count = 9
+hotlist_names_length = 15
+hotlist_names_level = 14
 hotlist_short_names = on
 hotlist_sort = group_time_asc
 item_time_format = "%H:%M"
 nickmode = on
 nickmode_empty = off
 paste_max_lines = 3
-prefix_action = " *"
+prefix_action = " ******"
 prefix_align = right
 prefix_align_max = 25
 prefix_error = "=!="
@@ -102,6 +102,8 @@ status_name = white
 status_number = yellow
 
 [completion]
+default_template = "%n|%(irc_channels)"
+nick_add_space = on
 nick_completor = ":"
 nick_first_only = off
 nick_ignore_chars = "[]-^"
@@ -109,7 +111,7 @@ partial_completion_alert = on
 partial_completion_command = off
 partial_completion_command_arg = off
 partial_completion_count = on
-partial_completion_nick = off
+partial_completion_other = off
 
 [history]
 display_default = 5
@@ -117,6 +119,9 @@ max_commands = 100
 max_lines = 4096
 
 [proxy]
+
+[network]
+gnutls_dh_prime_bitsmax_lines = 512
 
 [plugin]
 autoload = "*"
@@ -138,7 +143,7 @@ buffers.position = left
 buffers.priority = 0
 buffers.separator = on
 buffers.size = 0
-buffers.size_max = 0
+buffers.size_max = 17
 buffers.type = root
 input.color_bg = default
 input.color_delim = cyan
@@ -200,23 +205,27 @@ title.type = window
 [layout]
 buffer = "core;weechat;1"
 buffer = "perl;hilight;2"
-buffer = "irc;server.freenode;3"
-buffer = "irc;server.bitlbee;4"
-buffer = "irc;bitlbee.&bitlbee;5"
-buffer = "irc;freenode.#archlinux;6"
-buffer = "irc;freenode.#archlinux-offtopic;7"
-buffer = "irc;freenode.#weechat;8"
-buffer = "irc;freenode.#python;9"
-buffer = "irc;freenode.#linuxif;10"
-buffer = "irc;freenode.#sharntest;11"
-buffer = "irc;freenode.#wicd;12"
-buffer = "perl;iset;13"
+buffer = "irc;servers;3"
+buffer = "irc;bitlbee.&bitlbee;4"
+buffer = "irc;freenode.#archlinux;5"
+buffer = "irc;freenode.#archlinux-offtopic;6"
+buffer = "irc;freenode.#weechat;7"
+buffer = "irc;freenode.#python;8"
+buffer = "irc;freenode.#linuxif;9"
+buffer = "irc;freenode.#sharntest;10"
+buffer = "irc;freenode.#wicd;11"
+buffer = "perl;iset;12"
+buffer = "irc;oftc.#qtile;13"
+buffer = "irc;freenode.phrik;14"
+buffer = "irc;freenode.#geany;15"
+buffer = "irc;freenode.wizpod;16"
 window = "1;0;22;1;-;-"
 window = "2;1;0;0;core;weechat"
 window = "3;1;0;0;perl;hilight"
 
 [filter]
 irc_smart = on;*;irc_smart_filter;*
+modefilter = on;irc.bitlbee.&bitlbee;*;Mode &bitlbe
 
 [key]
 ctrl-? = "/input delete_previous_char"
@@ -377,6 +386,7 @@ meta-j98 = "/buffer 98"
 meta-j99 = "/buffer 99"
 meta-jmeta-l = "/input jump_last_buffer"
 meta-jmeta-p = "/input jump_previous_buffer"
+meta-jmeta-r = "/server raw"
 meta-k = "/input grab_key"
 meta-n = "/window scroll_next_highlight"
 meta-o = "/buffer 19"
