--- a/.weechat-dev/weechat.conf
+++ b/.weechat-dev/weechat.conf
@@ -50,8 +50,8 @@ chat_bg = default
 chat_buffer = white
 chat_channel = white
 chat_delimiters = green
-chat_highlight = yellow
-chat_highlight_bg = magenta
+chat_highlight = black
+chat_highlight_bg = green
 chat_host = cyan
 chat_nick = lightcyan
 chat_nick_color01 = cyan
@@ -102,7 +102,7 @@ status_name = white
 status_number = yellow
 
 [completion]
-default_template = "%n|%(irc_channels)"
+default_template = "%(nicks)|%(irc_channels)"
 nick_add_space = on
 nick_completor = ":"
 nick_first_only = off
@@ -210,17 +210,15 @@ buffer = "irc;bitlbee.&bitlbee;4"
 buffer = "irc;freenode.#archlinux;5"
 buffer = "irc;freenode.#archlinux-offtopic;6"
 buffer = "irc;freenode.#weechat;7"
-buffer = "irc;freenode.#python;8"
+buffer = "irc;what.cd.#linux;8"
 buffer = "irc;freenode.#linuxif;9"
 buffer = "irc;freenode.#sharntest;10"
 buffer = "irc;freenode.#wicd;11"
-buffer = "perl;iset;12"
-buffer = "irc;oftc.#qtile;13"
-buffer = "irc;freenode.phrik;14"
-buffer = "irc;freenode.#geany;15"
-buffer = "irc;freenode.wizpod;16"
+buffer = "irc;what.cd.#what.cd;12"
+buffer = "perl;iset;13"
+buffer = "irc;oftc.#qtile;14"
 window = "1;0;22;1;-;-"
-window = "2;1;0;0;core;weechat"
+window = "2;1;0;0;irc;freenode.#archlinux-offtopic"
 window = "3;1;0;0;perl;hilight"
 
 [filter]
@@ -229,6 +227,31 @@ modefilter = on;irc.bitlbee.&bitlbee;*;Mode &bitlbe
 
 [key]
 ctrl-? = "/input delete_previous_char"
+ctrl-A = "/input move_beginning_of_line"
+ctrl-B = "/input move_previous_char"
+ctrl-Cb = "/input insert \x02"
+ctrl-Cc = "/input insert \x03"
+ctrl-Ci = "/input insert \x1D"
+ctrl-Co = "/input insert \x0F"
+ctrl-Cr = "/input insert \x12"
+ctrl-Cu = "/input insert \x15"
+ctrl-D = "/input delete_next_char"
+ctrl-E = "/input move_end_of_line"
+ctrl-F = "/input move_next_char"
+ctrl-H = "/input delete_previous_char"
+ctrl-I = "/input complete_next"
+ctrl-J = "/input return"
+ctrl-K = "/input delete_end_of_line"
+ctrl-L = "/window refresh"
+ctrl-M = "/input return"
+ctrl-N = "/buffer +1"
+ctrl-P = "/buffer -1"
+ctrl-R = "/input search_text"
+ctrl-Sctrl-U = "/input set_unread"
+ctrl-T = "/input transpose_chars"
+ctrl-U = "/input delete_beginning_of_line"
+ctrl-W = "/input delete_previous_word"
+ctrl-Y = "/input clipboard_paste"
 meta-0 = "/buffer 10"
 meta-1 = "/buffer 1"
 meta-2 = "/buffer 2"
@@ -240,6 +263,10 @@ meta-7 = "/buffer 7"
 meta-8 = "/buffer 8"
 meta-9 = "/buffer 9"
 meta-= = "/filter toggle"
+meta-Oa = "/input history_global_previous"
+meta-Ob = "/input history_global_next"
+meta-Oc = "/input move_next_word"
+meta-Od = "/input move_previous_word"
 meta2-15~ = "/buffer -1"
 meta2-17~ = "/buffer +1"
 meta2-18~ = "/window -1"
@@ -390,10 +417,6 @@ meta-jmeta-r = "/server raw"
 meta-k = "/input grab_key"
 meta-n = "/window scroll_next_highlight"
 meta-o = "/buffer 19"
-meta-Oa = "/input history_global_previous"
-meta-Ob = "/input history_global_next"
-meta-Oc = "/input move_next_word"
-meta-Od = "/input move_previous_word"
 meta-p = "/buffer 20"
 meta-q = "/buffer 11"
 meta-r = "/buffer 14"
@@ -406,28 +429,3 @@ meta-wmeta-meta2-C = "/window right"
 meta-wmeta-meta2-D = "/window left"
 meta-y = "/buffer 16"
 meta-z = "/window zoom"
-ctrl-A = "/input move_beginning_of_line"
-ctrl-B = "/input move_previous_char"
-ctrl-Cb = "/input insert \x02"
-ctrl-Cc = "/input insert \x03"
-ctrl-Ci = "/input insert \x1D"
-ctrl-Co = "/input insert \x0F"
-ctrl-Cr = "/input insert \x12"
-ctrl-Cu = "/input insert \x15"
-ctrl-D = "/input delete_next_char"
-ctrl-E = "/input move_end_of_line"
-ctrl-F = "/input move_next_char"
-ctrl-H = "/input delete_previous_char"
-ctrl-I = "/input complete_next"
-ctrl-J = "/input return"
-ctrl-K = "/input delete_end_of_line"
-ctrl-L = "/window refresh"
-ctrl-M = "/input return"
-ctrl-N = "/buffer +1"
-ctrl-P = "/buffer -1"
-ctrl-R = "/input search_text"
-ctrl-Sctrl-U = "/input set_unread"
-ctrl-T = "/input transpose_chars"
-ctrl-U = "/input delete_beginning_of_line"
-ctrl-W = "/input delete_previous_word"
-ctrl-Y = "/input clipboard_paste"
